--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^4.7.7",
     "morgan": "^1.7.0",
     "multer": "^1.1.0",
+    "node-xlsx": "^0.12.0",
     "querystring": "^0.2.0",
     "serve-favicon": "^2.3.2"
   },
